src/css/global.css
body, html {
  padding: 0;
  margin: 0;
  overflow: hidden;
  scrollbar-width: none;
  cursor: url(../images/icon_cur.png), auto;
}

a {
  text-decoration: none;
  color: #000;
}

a:hover {
  animation: shake 0.5s;
  animation-iteration-count: infinite;
}

textarea:focus, input:focus {
  outline: none;
}

button, input[type="submit"], input[type="reset"] {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
}

p {
  margin: 0;
}

span {
  font-family: BaiJamjuree-Regular;
  font-style: normal;
  font-weight: normal;
  font-size: 2.86vw;
}

@font-face {
  font-family: moderat-meduim;
  src: url(../font/Moderat-Medium.woff);
}

@font-face {
  font-family: BaiJamjuree-Regular;
  src: url(../font/BaiJamjuree-Regular.ttf);
}

.MenuLink {
  margin: 0 30px 0 0;
}

@keyframes shake {
  0% {
    transform: translate(1px, 1px) rotate(0deg);
  }

  10% {
    transform: translate(-1px, -2px) rotate(-1deg);
  }

  20% {
    transform: translate(-3px, 0px) rotate(1deg);
  }

  30% {
    transform: translate(3px, 2px) rotate(0deg);
  }

  40% {
    transform: translate(1px, -1px) rotate(1deg);
  }

  50% {
    transform: translate(-1px, 2px) rotate(-1deg);
  }

  60% {
    transform: translate(-3px, 1px) rotate(0deg);
  }

  70% {
    transform: translate(3px, 1px) rotate(-1deg);
  }

  80% {
    transform: translate(-1px, -1px) rotate(1deg);
  }

  90% {
    transform: translate(1px, 2px) rotate(0deg);
  }

  100% {
    transform: translate(1px, -2px) rotate(-1deg);
  }
}

